# sentinel1

./: .dockerignore  .editorconfig  .flake8  .gitignore  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker_env  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: continuous-integration.yml  release.yml  sync-template.yml
.github/workflows/workflows/: release.yml
docker/: Dockerfile  Dockerfile-dev  Dockerfile-script-runner  build  cibuild  console  docs-server  env  format  notebook  pull  run-script  stac  test
docker/docker/: Dockerfile  format  notebook  run-script  stac  test
docs/: installation_and_basic_usage.ipynb
examples/: catalog.json  generate_example.py
examples/grd/: collection.json  item.json
examples/grd/S1A_EW_GRDM_1SDH_20221130T014342_20221130T014446_046117_058549/: S1A_EW_GRDM_1SDH_20221130T014342_20221130T014446_046117_058549.json
examples/grd/S1A_EW_GRDM_1SDH_20221130T014342_20221130T014446_046117_058549_BB15/: S1A_EW_GRDM_1SDH_20221130T014342_20221130T014446_046117_058549_BB15.json
examples/grd/S1A_IW_GRDH_1SDV_20210809T173953_20210809T174018_039156_049F13/: S1A_IW_GRDH_1SDV_20210809T173953_20210809T174018_039156_049F13.json
examples/grd/S1A_IW_GRDH_1SDV_20210809T173953_20210809T174018_039156_049F13_6FF8/: S1A_IW_GRDH_1SDV_20210809T173953_20210809T174018_039156_049F13_6FF8.json
examples/rtc/: catalog.json
examples/rtc/sentinel1-rtc-aws/: collection.json
examples/rtc/sentinel1-rtc-aws/2016/: catalog.json
examples/rtc/sentinel1-rtc-aws/2020/: catalog.json
examples/sentinel1-rtc-aws/: collection.json
examples/sentinel1-rtc-aws/2016/: catalog.json
examples/sentinel1-rtc-aws/2016/S1B_20161121_12SYJ_ASC/: S1B_20161121_12SYJ_ASC.json
examples/sentinel1-rtc-aws/2020/: catalog.json
examples/sentinel1-rtc-aws/2020/S1A_20200103_17RMJ_ASC/: S1A_20200103_17RMJ_ASC.json
examples/slc/: collection.json
examples/slc/S1A_IW_SL1__1_SH_20141031T095929_20141031T100002_003072_003842/: S1A_IW_SL1__1_SH_20141031T095929_20141031T100002_003072_003842.json
scripts/: cibuild  create_examples.py  format  lint  publish  rename  stac  stactools-version.py  test  update
scripts/scripts/: format  rename  update
src/stactools/sentinel1/: __init__.py  bands.py  commands.py  constants.py  metadata_links.py  product_metadata.py  rtc_metadata.py  stac.py
src/stactools/sentinel1/grd/: __init__.py  bands.py  commands.py  constants.py  metadata_links.py  product_metadata.py  properties.py  stac.py
src/stactools/sentinel1/rtc/: commands.py  constants.py  rtc_metadata.py  stac.py
src/stactools/sentinel1/slc/: commands.py  constants.py  metadata_links.py  product_metadata.py  properties.py  stac.py
tests/: __init__.py  test_commands.py  test_metadata_links.py
tests/data-files/S1A_20200103_17RMJ_ASC/: local_incident_angle.vrt
tests/data-files/rtc/S1A_20200103_17RMJ_ASC/: Gamma0_VH.vrt  Gamma0_VV.vrt
tests/grd/: test_commands.py  test_metadata.py  test_metadata_links.py  test_stac.py
tests/rtc/: test_commands.py
tests/slc/: test_commands.py  test_metadata.py  test_stac.py
(+49 files in other folders)
