[project]
name = "stactools-sentinel1"
dynamic = ["version"]
description = "stactools subpackage for creating sentinel1 STACs"
authors = [ { name = "stac-utils", email = "stac@radiant.earth" } ]
readme = "README.md"
keywords = [
    "stactools",
    "pystac",
    "catalog",
    "STAC",
    "sentinel",
    "GRD",
    "radar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "stactools >= 0.4.5",
    "pystac ~= 1.9.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"


[tool.setuptools.dynamic]
version = {attr = "stactools.sentinel1.__version__"}

[tools.setuptools.packages]
find = { where = "src" }

[project.urls]
Github = "https://github.com/stactools-packages/sentinel1"
Documentation = "https://github.com/stactools-packages/sentinel1"
Issues = "https://github.com/stactools-packages/sentinel1/issues"
