[metadata]
name = stactools-sentinel1
version = attr: stactools.sentinel1.__version__
description = stactools subpackage for creating sentinel1 STACs
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/sentinel1
project_urls =
    Documentation = https://github.com/stactools-packages/sentinel1
    Issues = https://github.com/stactools-packages/sentinel1/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    sentinel
    GRD
    radar
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.4.3

[options.packages.find]
where = src
